[tool.poetry]
name = "venture-sim"
version = "0.1.0"
description = ""
authors = ["Lei Du <dulei66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
